--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "truffle test"
   },
   "devDependencies": {
-    "truffle": "^4.0.4"
+    "truffle": "^4.0.4",
+    "zeppelin-solidity": "^1.5.0"
   }
 }
