--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "truffle test"
   },
   "devDependencies": {
+    "ethereumjs-abi": "^0.6.5",
     "truffle": "^4.0.4",
     "zeppelin-solidity": "^1.5.0"
   }
