--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   },
   "devDependencies": {
     "recursive-install": "^1.3.0"
+  },
+  "dependencies": {
+    "zeppelin-solidity": "^1.6.0"
   }
 }
