Update package.json files

--- a/upgradeability_using_inherited_storage/package.json
+++ b/upgradeability_using_inherited_storage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zos-lab",
+  "name": "upgradeability-using-inherited-storage",
   "version": "0.1.0",
   "private": true,
   "author": "Francisco Giordano <fran@zeppelin.solutions>",
