VTables approach enhancement (#32)
* Improve vtable approach

* Update vtable to upgrade entire versions

Do not allow individual functions to be updated in a proxy
Add fallback function support since we're at it

--- a/upgradeability_with_vtable/package.json
+++ b/upgradeability_with_vtable/package.json
@@ -8,6 +8,7 @@
     "test": "truffle test"
   },
   "devDependencies": {
-    "truffle": "^4.0.4"
+    "ethereumjs-abi": "^0.6.5",
+    "truffle": "^4.1.0"
   }
 }
