--- a/kernel/package.json
+++ b/kernel/package.json
@@ -8,7 +8,9 @@
     "test": "truffle test"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "truffle": "^4.0.4",
-    "zeppelin-solidity": "^1.5.0"
+    "zeppelin-solidity": "^1.8.0"
   }
 }
