--- a/migrating_legacy_token_opt_in/package.json
+++ b/migrating_legacy_token_opt_in/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "migrating_legacy_token",
+  "name": "migrating_legacy_token_opt_in",
   "version": "0.1.0",
   "private": true,
   "author": "Facu Spagnuolo <facu@zeppelin.solutions>",
