--- a/migrating_legacy_token_opt_in/package.json
+++ b/migrating_legacy_token_opt_in/package.json
@@ -9,7 +9,8 @@
   },
   "devDependencies": {
     "ethereumjs-abi": "^0.6.5",
-    "truffle": "^4.1.5",
+    "truffle": "^4.1.7",
+    "openzeppelin-zos": "^1.9.1",
     "zeppelin-solidity": "^1.8.0",
     "zos-upgradeability": "git://github.com/zeppelinos/upgradeability-lib.git#68cd61fb48d0e4eec7142241448efa40c395bf33"
   }
