Use tokens for gas measurements

--- a/initializer_contracts_with_args_cheaper/package.json
+++ b/initializer_contracts_with_args_cheaper/package.json
@@ -5,6 +5,6 @@
   "license": "MIT",
   "dependencies": {
     "buidler": "^0.1.4",
-    "openzeppelin-solidity": "^1.11.0-rc.1"
+    "openzeppelin-solidity": "^1.11.0"
   }
 }
