--- a/package_manager/package.json
+++ b/package_manager/package.json
@@ -29,15 +29,17 @@
   },
   "homepage": "https://github.com/zeppelinos/package-manager/tree/master/#readme",
   "devDependencies": {
-    "bignumber.js": "^7.2.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
+    "bignumber.js": "^7.2.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
+    "ethereumjs-abi": "^0.6.5",
     "truffle": "^4.1.13",
     "web3": "^0.18.4"
   }
