Add zeppelin and aragon registrars poc

--- a/package_manager/package.json
+++ b/package_manager/package.json
@@ -35,16 +35,13 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
-    "bignumber.js": "^7.2.0",
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
-    "chai-bignumber": "^2.0.2",
     "ethereumjs-abi": "^0.6.5",
-    "truffle": "^4.1.13",
-    "web3": "^0.18.4"
+    "truffle": "^4.1.14"
   },
   "dependencies": {
+    "@aragon/os": "^4.0.0-beta.2",
     "eth-ens-namehash": "^2.0.8",
-    "openzeppelin-solidity": "^1.12.0"
+    "openzeppelin-zos": "^1.9.4",
+    "zos-lib": "^1.4.1"
   }
 }
