--- a/contracts-upgradeability-transpiler/package.json
+++ b/contracts-upgradeability-transpiler/package.json
@@ -11,6 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^2.4.0",
+    "eslint-config-prettier": "^6.8.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "fs-extra": "^8.1.0",
     "lodash.find": "^4.6.0"
   },
