Proper super chain call order

--- a/contracts-upgradeability-transpiler/.eslintrc.json
+++ b/contracts-upgradeability-transpiler/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": ["plugin:prettier/recommended"]
+  "env": {
+    "es6": true,
+    "node": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 8
+  }
 }
